--- a/index.html
+++ b/index.html
@@ -2,120 +2,112 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--BOOTSTRAP CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--MY EXTERNAL CSS FILE-->
-    <link href="asset/css/style.css" rel="stylesheet">
-    <!--TAB FIRST PAFE TITLE-->
-    <title>HAPPY-BABY | O MNIE</title>
-    <!--FAVICON-->
-    <link rel="apple-touch-icon" sizes="180x180" href="asset/images/favicon180x180.jpeg">
-    <link rel="icon" type="image/png" sizes="32x32" href="asset/images/favicon32x32.jpeg">
-    <link rel="icon" type="image/png" sizes="16x16" href="asset/images/favicon16x16.jpeg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Solitreo&family=Sriracha&display=swap"
+    rel="stylesheet">
+  <!--BOOTSTRAP CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--MY EXTERNAL CSS FILE-->
+  <link href="asset/css/style.css" rel="stylesheet">
+  <!--TAB FIRST PAFE TITLE-->
+  <title>HAPPY-BABY | O MNIE</title>
+  <!--FAVICON-->
+  <link rel="apple-touch-icon" sizes="180x180" href="asset/images/favicon180x180.jpeg">
+  <link rel="icon" type="image/png" sizes="32x32" href="asset/images/favicon32x32.jpeg">
+  <link rel="icon" type="image/png" sizes="16x16" href="asset/images/favicon16x16.jpeg">
 </head>
 
 <body>
-    <!--NAV BAR FOR THE WEBSITE NOT ADJUSTED YET-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img src="asset/images/logo.jpg" alt="Bootstrap" width="50" height="40">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">O Mnie</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Od Bobasa do 3-latka</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Wsparcie Logopedyczne</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Kontakt</a>
-              </li>
-            </ul>
+  <!--NAV BAR FOR THE WEBSITE NOT ADJUSTED YET-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">
+        <img src="asset/images/logo.jpg" alt="Bootstrap" width="50" height="40">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">O Mnie</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Od Bobasa do 3-latka</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Wsparcie Logopedyczne</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--IMAGE CAROUSEL-->
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!--CONTACT FORM-->
+  <footer id="contact" class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 text-center my-4">
+        <h2 class="display-5">Kontakt</h2>
+        <p class="mt-4">#</p>
+      </div>
+      <div class="col-12 col-md-10 col-lg-8 mb-4">
+        <form class="row g-3">
+          <div class="col-lg-4 sharp-corners">
+            <label for="full-name" class="form-label">Imię i Nazwisko</label>
+            <input type="text" class="form-control" id="full-name">
           </div>
-        </div>
-      </nav>
-    <!--IMAGE CAROUSEL-->
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+          <div class="col-lg-4 sharp-corners">
+            <label for="phonenumber" class="form-label">Numer telefonu</label>
+            <input type="tel" class="form-control" id="phonenumber">
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+          <div class="col-lg-4 sharp-corners">
+            <label for="email" class="form-label">Adres Email</label>
+            <input type="email" class="form-control" id="email">
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+          <div class="col-12 sharp-corners">
+            <label for="message" class="form-label">Wiadomość</label>
+            <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    <!--CONTACT FORM-->
-    <form class="row g-3">
-      <div class="col-md-6">
-        <label for="inputEmail4" class="form-label">Email</label>
-        <input type="email" class="form-control" id="inputEmail4">
-      </div>
-      <div class="col-md-6">
-        <label for="inputPassword4" class="form-label">Password</label>
-        <input type="password" class="form-control" id="inputPassword4">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress" class="form-label">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress2" class="form-label">Address 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-      </div>
-      <div class="col-md-6">
-        <label for="inputCity" class="form-label">City</label>
-        <input type="text" class="form-control" id="inputCity">
-      </div>
-      <div class="col-md-4">
-        <label for="inputState" class="form-label">State</label>
-        <select id="inputState" class="form-select">
-          <option selected>Choose...</option>
-          <option>...</option>
-        </select>
-      </div>
-      <div class="col-md-2">
-        <label for="inputZip" class="form-label">Zip</label>
-        <input type="text" class="form-control" id="inputZip">
-      </div>
-      <div class="col-12">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
-          <label class="form-check-label" for="gridCheck">
-            Check me out
-          </label>
-        </div>
-      </div>
-      <div class="col-12">
-        <button type="submit" class="btn btn-primary">Sign in</button>
-      </div>
-    </form>
-    <!--BOOTSTRAP JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+          <div class="col-12 sharp-corners">
+            <button type="submit" class="btn btn-primary">Wyślij</button>
+          </div>
+        </form>
+        <!--BOOTSTRAP JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+          crossorigin="anonymous"></script>
 </body>
 
 </html>
