Updated NAVBAR with links to each tab as well as contact section

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">O Mnie</a>
+            <a class="nav-link active" aria-current="page" href="index.html">O Mnie</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Od Bobasa do 3-latka</a>
+            <a class="nav-link" href="childbirth-school.html">Od Bobasa do 3-latka</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Wsparcie Logopedyczne</a>
+            <a class="nav-link" href="speech-therapy.html">Wsparcie Logopedyczne</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link" href="#contact">Kontakt</a>
           </li>
         </ul>
       </div>
