Added working NAV BAR to each and single page, also added all the styles to each page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <!--NAV BAR FOR THE WEBSITE NOT ADJUSTED YET-->
+  <!--NAVBAR-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
@@ -39,7 +39,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">O Mnie</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="childbirth-school.html">Od Bobasa do 3-latka</a>
+            <a class="nav-link" href="childbirth-school.html">Szkoła Rodzenia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="newborn-to-toddler.html">Od Bobasa do 3-latka</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="speech-therapy.html">Wsparcie Logopedyczne</a>
@@ -52,6 +55,7 @@
     </div>
   </nav>
   <!--IMAGE CAROUSEL-->
+  <h1>TU WPIERDOLIM OBRAZKI I TEKST</h1>
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -80,7 +84,7 @@
     <div class="row justify-content-center">
       <div class="col-12 text-center my-4">
         <h2 class="display-5">Kontakt</h2>
-        <p class="mt-4">#</p>
+        <p class="mt-4">JAKIS DODATKOWY INSPIRUJACY TEKST</p>
       </div>
       <div class="col-12 col-md-10 col-lg-8 mb-4">
         <form class="row g-3">
